<?xml version="1.0"?>
<package format="2">
  <name>volga_core</name>
  <version>1.0.0</version>
  <description>The volga_core package</description>

  <maintainer email="gilles.chabert@irt-jules-verne.fr">Gilles Chabert</maintainer>

  <license>Apache2</license>

  <author email="gilles.chabert@irt-jules-verne.fr">Gilles Chabert</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>trac_ik_lib</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>

</package>
