<?xml version="1.0"?>
<package format="2">
  <name>volga_examples</name>
  <version>1.0.0</version>
  <description>The volga_examples package</description>

  <maintainer email="gilles.chabert@irt-jules-verne.fr">Gilles Chabert</maintainer>

  <license>Apache2</license>

  <author email="gilles.chabert@irt-jules-verne.fr">Gilles Chabert</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>volga_core</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>volga_core</exec_depend>
  
</package>
